# gh-actions-runner

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  flake.nix  gh-actions-runner.env  gh-actions-runner.service  remove.sh  rust-toolchain  start.sh
.github/workflows/: main.yml
anvil-runner/: Dockerfile
bench-runner/: Dockerfile  gh-actions-runner-compose.yml  gh-actions-runner.env  gh-actions-runner.service
gpu-runner/: Dockerfile  entrypoint-wrapper.sh  gh-actions-runner-compose.yml  gh-actions-runner.env  gh-actions-runner.service
mac/: gh-actions-runner.plist  mac_setup.sh
scripts/: cleanup.sh  docker_cleanup.sh  entrypoint-wrapper.sh  gpu_drivers.sh  gpu_setup.sh  install.sh  nullfs.sh  remove.sh  runner_cleanup.sh  server_files.sh  setup.sh  update-reboot.sh  vultr_gpu_setup.sh
server/: daemon.json  gh-actions-runner.env  gh-actions-runner.service
src/: lib.rs
test-runner/: Dockerfile  gh-actions-runner-compose.yml  gh-actions-runner.env  gh-actions-runner.service
