[package]
name = "neptune-ci"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neptune = { version = "9.0", features = ["cuda", "bls", "pasta", "arity2"] }
ff = "0.13.0"
pasta_curves = "0.5"
generic-array = "0.14.6"
